<resources>
    <string name="app_name">Khiladi</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_photo">Select Photo</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="complete_account">Complete your account information</string>
    <string name="edit_account">Edit your Account info</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="select_sport">Pick your sports</string>
    <string name="save">save</string>
    <string name="create_accont">Create an account</string>
    <string name="facebook_appID">420347148591467</string>
    <string name="facebook_app_secret">ce186ce4234a18e6bc41928856b4281a</string>
    <string name="anique">anique</string>
    <string name="select_sports">Select sports</string>
    <string name="ediy_account">Edit your account</string>
    <string name="facebook_app_id">420347148591467</string>
    <string name="fb_login_protocol_scheme">fb420347148591467</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="need_help_sign_in">Need help sign in</string>
    <string name="forget_password">Forget password?</string>
    <string name="reset_password">Reset password</string>
    <string name="next">Next</string>
    <string name="email_has_been_sent_to_you">Email has been sent to you</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="verify_email">Verify Email</string>
    <string name="email_verification">Email Verification</string>
    <string name="reset">Reset</string>
    <string name="verify">verify</string>
    <string name="sign_in">Sign In</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="profile_url">https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRBpOFoYnHzWE0GFosYlYFF57SssQYGH2RiIUuBfaL43U0anJB5</string>
    <string name="confirm_password">Confirm password</string>
</resources>