<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.accountFragments.Register">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
            tools:layout_editor_absoluteY="109dp" tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageView
                    android:id="@+id/imageViewRegisterFragment"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_120"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/main_logo"
                    />

            <EditText
                    android:id="@+id/userNameRegisterFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageViewRegisterFragment"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/email_password_corners"
                    android:textSize="@dimen/sp_16"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    />

            <EditText
                    android:id="@+id/emailRegisterFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/userNameRegisterFragment"
                    android:background="@drawable/email_password_corners"
                    android:textSize="@dimen/sp_16"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    />

            <EditText
                    android:id="@+id/passwordRegisterFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailRegisterFragment"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/email_password_corners"
                    android:textSize="@dimen/sp_16"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    />

            <EditText
                    android:id="@+id/confirmPasswordRegisterFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passwordRegisterFragment"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/email_password_corners"
                    android:textSize="@dimen/sp_16"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/nextBtnRegisterFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/confirmPasswordRegisterFragment"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@android:color/white"
                    android:text="@string/next"
                    app:spinning_bar_width="4dp"
                    app:spinning_bar_color="@android:color/white"
                    android:background="@drawable/login_button_corners"
                    />


            <View
                    android:id="@+id/view_separater"
                    android:layout_below="@+id/nextBtnRegisterFragment"
                    android:layout_marginTop="@dimen/dp_25"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@drawable/separater"
                    android:layout_marginLeft="@dimen/dp_25"
                    android:layout_marginRight="@dimen/dp_25"
                    />

            <LinearLayout
                    android:layout_below="@id/view_separater"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:fontFamily="@font/lato_light"
                        />
                <TextView
                        android:id="@+id/signInLoginFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_15"
                        android:fontFamily="@font/lato_regular"
                        android:layout_marginLeft="@dimen/dp_5"
                        />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
</layout>